--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production --progress",
     "start": "node ./express-server.js",
-    "lint": "eslint app/",
+    "lint": "npm run lint:eslint && npm run lint:cspell",
+    "lint:eslint": "eslint app/",
+    "lint:cspell": "cspell **",
     "lint-staged": "lint-staged",
     "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
@@ -48,6 +50,7 @@
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "buffer": "^6.0.3",
+    "cspell": "^5.19.2",
     "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
     "eslint-import-resolver-webpack": "^0.13.2",
