--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "core-js": "^3.21.1",
     "mqtt": "^4.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "whatwg-fetch": "^3.6.2"
   },
