--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.4.3",
     "@babel/core": "^7.19.1",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
@@ -57,6 +58,7 @@
     "eslint": "^8.23.1",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
