--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "url": "0.11.0"
   },
   "optionalDependencies": {
-    "lightningcss-linux-x64-gnu": "1.16.0"
+    "@lmdb/lmdb-darwin-arm64": "2.6.2",
+    "lightningcss-darwin-arm64": "1.16.0",
+    "lightningcss-linux-x64-gnu": "1.16.0",
+    "lightningcss-win32-x64-msvc": "1.16.0"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
