--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "events": "3.3.0",
     "parcel": "2.8.0",
     "process": "0.11.10",
+    "punycode": "2.1.1",
     "querystring-es3": "0.2.1",
     "url": "0.11.0"
   },
