--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "bulma": "0.9.4",
-    "mqtt": "4.3.7"
+    "mqtt": "4.3.7",
+    "qrcode": "^1.5.1"
   }
 }
