Add prettier to CI

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "format": "npx prettier --write src/",
+    "lint": "npx prettier --check src/"
   },
   "repository": {
     "type": "git",
