--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@lmdb/lmdb-darwin-arm64": "2.7.2",
     "lightningcss-darwin-arm64": "1.17.1",
     "lightningcss-linux-x64-gnu": "1.17.1",
-    "lightningcss-win32-x64-msvc": "1.17.1"
+    "lightningcss-win32-x64-msvc": "1.17.1",
+    "lightningcss-linux-arm64-gnu": "1.17.1"
   },
   "dependencies": {
     "@mdi/font": "7.1.96",
