--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "url": "0.11.1"
   },
   "optionalDependencies": {
+    "@parcel/watcher-linux-x64-glibc": "2.3.0",
     "@lmdb/lmdb-darwin-arm64": "2.8.5",
     "lightningcss-darwin-arm64": "1.21.7",
     "lightningcss-linux-x64-gnu": "1.21.7",
