--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "url": "0.11.1"
   },
   "optionalDependencies": {
-    "@parcel/watcher-linux-x64-glibc": "2.3.0",
     "@lmdb/lmdb-darwin-arm64": "2.8.5",
+    "@parcel/watcher-linux-x64-glibc": "2.3.0",
     "lightningcss-darwin-arm64": "1.21.7",
+    "lightningcss-linux-arm64-gnu": "1.21.7",
     "lightningcss-linux-x64-gnu": "1.21.7",
-    "lightningcss-win32-x64-msvc": "1.21.7",
-    "lightningcss-linux-arm64-gnu": "1.21.7"
+    "lightningcss-win32-x64-msvc": "1.21.7"
   },
   "dependencies": {
-    "@mdi/font": "7.2.96",
     "bulma": "0.9.4",
+    "material-symbols": "^0.31.2",
     "mqtt": "4.3.7",
     "qrcode": "1.5.3"
   }
