--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/srobo/kit-ui#readme",
   "devDependencies": {
-    "@parcel/transformer-sass": "2.9.3",
+    "@parcel/transformer-sass": "2.14.4",
     "events": "3.3.0",
-    "parcel": "2.9.3",
+    "parcel": "2.14.4",
     "prettier": "3.0.3",
     "process": "0.11.10",
     "punycode": "1.4.1",
@@ -32,10 +32,10 @@
   "optionalDependencies": {
     "@lmdb/lmdb-darwin-arm64": "2.8.5",
     "@parcel/watcher-linux-x64-glibc": "2.3.0",
-    "lightningcss-darwin-arm64": "1.21.7",
-    "lightningcss-linux-arm64-gnu": "1.21.7",
-    "lightningcss-linux-x64-gnu": "1.21.7",
-    "lightningcss-win32-x64-msvc": "1.21.7"
+    "lightningcss-darwin-arm64": "^1.29.3",
+    "lightningcss-linux-arm64-gnu": "^1.29.3",
+    "lightningcss-linux-x64-gnu": "^1.29.3",
+    "lightningcss-win32-x64-msvc": "^1.29.3"
   },
   "dependencies": {
     "bulma": "0.9.4",
