Update bulma to 1.0.4

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lightningcss-win32-x64-msvc": "^1.29.3"
   },
   "dependencies": {
-    "bulma": "0.9.4",
+    "bulma": "^1.0.4",
     "material-symbols": "^0.31.2",
     "mqtt": "4.3.7",
     "qrcode": "1.5.3"
