--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "bulma": "^1.0.4",
     "material-symbols": "^0.31.2",
-    "mqtt": "4.3.7",
+    "mqtt": "^5.12.0",
     "qrcode": "1.5.3"
   }
 }
