--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "start": "vite --open",
+    "start:lan": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write src/",
